--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-datasets==1.14.0
+datasets==1.8.0
 einops==0.3.2
-horovod==0.23.0
-numpy==1.19.5
-prettytable==2.2.1
-sacrebleu==2.0.0
+horovod==0.22.1
+prettytable==2.1.0
+sacrebleu
 tokenizers==0.10.3
-torch==1.10.0
-tqdm==4.62.3
-transformers==4.12.2
+torch==1.9.0
+tqdm
+transformers==4.8.2
